--- a/TheFishingSpot/TheFishingSpot.Web/TheFishingSpot.Web.csproj
+++ b/TheFishingSpot/TheFishingSpot.Web/TheFishingSpot.Web.csproj
@@ -159,7 +159,10 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Areas\News\Controllers\NewsController.cs" />
+    <Compile Include="Areas\News\Models\CommentCreateViewModel.cs" />
+    <Compile Include="Areas\News\Models\CommentViewModel.cs" />
     <Compile Include="Areas\News\Models\NewsCreateViewModel.cs" />
+    <Compile Include="Areas\News\Models\NewsDetailedViewModel.cs" />
     <Compile Include="Areas\News\NewsAreaRegistration.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -186,10 +189,14 @@
     <Content Include="Areas\News\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\News\Views\News\Index.cshtml" />
     <Content Include="Areas\News\Views\News\Create.cshtml" />
+    <Content Include="Areas\News\Views\News\ShowDetails.cshtml" />
+    <Content Include="Areas\News\Views\News\_ShowComments.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
