Fixed views to use IEnumerable<T> instead of ICollection

--- a/TheFishingSpot/TheFishingSpot.Web/TheFishingSpot.Web.csproj
+++ b/TheFishingSpot/TheFishingSpot.Web/TheFishingSpot.Web.csproj
@@ -229,6 +229,7 @@
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Areas\News\Views\Comments\_AddComment.cshtml" />
+    <Content Include="Areas\News\Views\Shared\NotFound.cshtml" />
     <None Include="Scripts\jquery-2.1.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
