--- a/TheFishingSpot/TheFishingSpot.Web/Web.config
+++ b/TheFishingSpot/TheFishingSpot.Web/Web.config
@@ -21,6 +21,10 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <customErrors mode="On">
+    <error statusCode="404" redirect="NotFound.cshtml" />
+    <error statusCode="500" redirect="500.html" />
+</customErrors>
   </system.web>
   <system.webServer>
     <modules>
