--- a/TheFishingSpot/TheFishingSpot.Web.Infrastructure/packages.config
+++ b/TheFishingSpot/TheFishingSpot.Web.Infrastructure/packages.config
@@ -3,4 +3,8 @@
   <package id="AutoMapper" version="3.2.1" targetFramework="net45" />
   <package id="CsQuery" version="1.3.4" targetFramework="net45" />
   <package id="HtmlSanitizer" version="1.1.5338.17998" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
 </packages>
