--- a/TheFishingSpot/TheFishingSpot.Web.Infrastructure/TheFishingSpot.Web.Infrastructure.csproj
+++ b/TheFishingSpot/TheFishingSpot.Web.Infrastructure/TheFishingSpot.Web.Infrastructure.csproj
@@ -42,6 +42,9 @@
     <Reference Include="HtmlSanitizer">
       <HintPath>..\packages\HtmlSanitizer.1.1.5338.17998\lib\net40\HtmlSanitizer.dll</HintPath>
     </Reference>
+    <Reference Include="Kendo.Mvc">
+      <HintPath>..\TheFishingSpot.Web\Libraries\Kendo.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
@@ -80,16 +83,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Caching\ICacheService.cs" />
+    <Compile Include="Caching\InMemoryCache.cs" />
     <Compile Include="Helpers\EnumHelpers.cs" />
+    <Compile Include="Helpers\KendoHelpers.cs" />
     <Compile Include="HtmlSanitizerAdapter.cs" />
     <Compile Include="ISanitizer.cs" />
     <Compile Include="Mapping\AutoMapperConfig.cs" />
     <Compile Include="Mapping\IHaveCustomMappings.cs" />
     <Compile Include="Mapping\IMapFrom.cs" />
+    <Compile Include="Populators\DropDownListPopulator.cs" />
+    <Compile Include="Populators\IDropDownListPopulator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TheFishingSpot.Data\TheFishingSpot.Data.csproj">
+      <Project>{20ccd24a-050b-481e-aa2a-ba6e70423038}</Project>
+      <Name>TheFishingSpot.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TheFishingSpot.Models\TheFishingSpot.Models.csproj">
+      <Project>{ab4ab851-ac49-4cce-b0c9-a9fc538cd804}</Project>
+      <Name>TheFishingSpot.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\AutoMapper.3.2.1\tools\AutoMapper.targets" Condition="Exists('..\packages\AutoMapper.3.2.1\tools\AutoMapper.targets')" />
